# TidyTUI

./: .gitignore  Cargo.toml  LICENSE  PACKAGING.md  README.md  definitions.yaml
.github/workflows/: release.yml
packaging/aur/: .SRCINFO  PKGBUILD
src/: main.rs
src/core/: cleaner.rs  discovery.rs  mod.rs  registry.rs  scanner.rs
src/tui/: app.rs  ui.rs
