[package]
name = "TidyTUI"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast, terminal-based system cleaner written in Rust."
license = "MIT"
repository = "https://github.com/divyaprakash0426/TidyTUI"
readme = "README.md"
authors = ["Divyaprakash Dhurandhar <divyaprakash.0426@gmail.com>"]
keywords = ["system", "cleaner", "tui", "cli", "maintenance"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.100"
bytesize = "2.3.1"
crossterm = "0.29.0"
dirs = "6.0.0"
os-release = "0.1.0"
ratatui = "0.29.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
walkdir = "2.5.0"
